--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "pinia": "^2.1.7",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
