--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vueuse/integrations": "^10.7.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
+    "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
