--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/vue-fontawesome": "^3.0.5",
     "@vueuse/core": "^10.7.1",
     "@vueuse/integrations": "^10.7.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
+    "font-awesome": "^4.7.0",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "postcss": "^8.4.32",
