--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tailwindcss": "^3.4.0",
     "universal-cookie": "^6.1.1",
     "vue": "^3.3.11",
+    "vue-i18n": "9",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
