--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "font-awesome": "^4.7.0",
-    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "lodash.get": "^4.4.2",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "postcss": "^8.4.32",
@@ -41,6 +42,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.6",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^18.19.3",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-prettier": "^8.0.0",
